Update API application

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start:user-service": "nest start --watch user-service",
+    "start:common-service": "nest start --watch common-service",
+    "start:api": "nest start --watch api",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
