--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "test:e2e": "jest --config ./apps/nest-boilerplate/test/jest-e2e.json"
   },
   "dependencies": {
+    "@mikro-orm/core": "^4.2.3",
+    "@mikro-orm/mongodb": "^4.2.3",
+    "@mikro-orm/nestjs": "^4.2.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
