--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "build:entities": "tsc -p ./libs/entities/tsconfig.lib.json",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -35,6 +36,7 @@
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.4.4",
     "@nestjs/swagger": "^4.6.1",
+    "@types/express": "4.17.8",
     "@types/moment": "^2.13.0",
     "@types/passport-jwt": "^3.0.3",
     "class-transformer": "^0.3.1",
@@ -62,7 +64,7 @@
     "@nestjs/testing": "7.4.1",
     "@types/compression": "^1.7.0",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "4.17.7",
+    "@types/express-serve-static-core": "^4.17.13",
     "@types/helmet": "^0.0.47",
     "@types/jest": "25.2.3",
     "@types/mongoose": "^5.7.34",
@@ -109,7 +111,9 @@
       "@app/core/(.*)": "<rootDir>/libs/core/src/$1",
       "@app/core": "<rootDir>/libs/core/src",
       "@app/common/(.*)": "<rootDir>/libs/common/src/$1",
-      "@app/common": "<rootDir>/libs/common/src"
+      "@app/common": "<rootDir>/libs/common/src",
+      "@app/schema/(.*)": "<rootDir>/libs/schema/src/$1",
+      "@app/schema": "<rootDir>/libs/schema/src"
     }
   }
 }
