--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,12 @@
       ],
       "@app/common/*": [
         "libs/common/src/*"
+      ],
+      "@app/entities": [
+        "libs/entities/src"
+      ],
+      "@app/entities/*": [
+        "libs/entities/src/*"
       ]
     }
   }
